@@ -1,3 +1,11 @@
+[0, 15, 85]: 2019-01-08
+  - the types used by `SafeConstructor` for mappings and sequences can
+    now by set by assigning to `XXXConstructor.yaml_base_dict_type`
+    (and `..._list_type`), preventing the need to copy two methods
+    with 50+ lines that had `var = {}` hardcoded.  (Implemented to
+    help solve an feature request by `Anthony Sottile
+    <https://bitbucket.org/asottile/>`__ in an easier way)
+
 [0, 15, 84]: 2019-01-07
   - fix for `CommentedMap.copy()` not returning `CommentedMap`, let alone copying comments etc.
     (reported by `Anthony Sottile <https://bitbucket.org/asottile/>`__)
